--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@iconscout/react-unicons": "^2.0.2",
     "axios": "^1.6.8",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "swiper": "^11.1.1"
